--- a/ispend/templates/partials/_sidebar.html
+++ b/ispend/templates/partials/_sidebar.html
@@ -52,13 +52,13 @@
 
         <ul class="nav flex-column mb-auto">
           <li class="nav-item">
-            <a class="nav-link d-flex align-items-center gap-2" href="#">
+            <a class="nav-link d-flex align-items-center gap-2" href="{% url 'preferences' %}">
               <svg class="bi"><use xlink:href="#gear-wide-connected"/></svg>
               Settings
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link d-flex align-items-center gap-2" href="#">
+            <a class="nav-link d-flex align-items-center gap-2" href="{% url 'logout' %}">
               <svg class="bi"><use xlink:href="#door-closed"/></svg>
               Sign out
             </a>
